examples/datalog/11_types/09_zero_handling.dl.out
Executing script: examples/datalog/11_types/09_zero_handling.dl

> .db create test_zero
Database 'test_zero' created.
Switched to database: test_zero
> .db use test_zero
Switched to database: test_zero
> +data[(1, 0), (2, 10), (3, 0), (4, 20)].
Inserted 4 facts into 'data'.
> +zeros(Id) :- data(Id, 0).
Rule 'zeros' registered.
> ?- zeros(X).
2 rows:
  (1)
  (3)
> +nonzeros(Id, V) :- data(Id, V), V > 0.
Rule 'nonzeros' registered.
> ?- nonzeros(X, Y).
2 rows:
  (2, 10)
  (4, 20)
> +plus_zero(Id, V+0) :- data(Id, V).
Script error: Line 20: Parse error: Invalid term: 'V+0'
