examples/datalog/11_types/09_zero_handling.dl
// Test: Zero Handling
// Category: 11_types
// Description: Tests behavior with zero values

.db create test_zero
.db use test_zero

// Data with zeros
+data[(1, 0), (2, 10), (3, 0), (4, 20)].

// Find zero values
+zeros(Id) :- data(Id, 0).
?- zeros(X).

// Find non-zero values
+nonzeros(Id, V) :- data(Id, V), V > 0.
?- nonzeros(X, Y).

// Arithmetic with zero - use head arithmetic
+plus_zero(Id, V+0) :- data(Id, V).
?- plus_zero(X, Y).

+times_zero(Id, V*0) :- data(Id, V).
?- times_zero(X, Y).

// Zero in aggregations
+sum_with_zeros(sum<V>) :- data(_, V).
?- sum_with_zeros(S).

+count_with_zeros(count<Id>) :- data(Id, _).
?- count_with_zeros(C).

// Division edge case: divide by non-zero
+safe_div[(10, 2), (20, 5), (0, 1)].
+div_result(N, D, N/D) :- safe_div(N, D).
?- div_result(X, Y, Z).

// Cleanup
.db use default
.db drop test_zero
